<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="#fff7f7f8" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:orientation="horizontal" android:id="@id/lay_title" android:background="@color/top_title_red" android:paddingTop="10.0dip" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="@dimen/top_title_heigh" android:layout_alignParentTop="true">
        <TextView android:textColor="@color/white" android:gravity="center" android:layout_gravity="center" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/qr" android:layout_weight="1.0" android:layout_centerInParent="true" style="@style/TopTitleText" />
        <LinearLayout android:orientation="horizontal" android:paddingLeft="10.0dip" android:layout_width="wrap_content" android:layout_height="fill_parent" android:minWidth="50.0dip" android:layout_centerVertical="true" android:onClick="onBack">
            <ImageView android:layout_gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/btn_back" />
        </LinearLayout>
    </RelativeLayout>
    <LinearLayout android:layout_gravity="center_horizontal" android:orientation="vertical" android:paddingTop="10.0dip" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="0.0dip" android:layout_weight="1.5" android:layout_alignParentTop="true">
        <ImageView android:layout_gravity="center" android:id="@id/image_view" android:padding="10.0dip" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/qrcode_image_margin_top" android:layout_marginTop="@dimen/qrcode_image_margin_top" android:layout_marginRight="@dimen/qrcode_image_margin_top" android:src="@null" />
    </LinearLayout>
    <RelativeLayout android:orientation="vertical" android:paddingTop="10.0dip" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0" android:layout_alignParentTop="true">
        <TextView android:textColor="#ff55595c" android:gravity="center" android:layout_gravity="center_horizontal" android:id="@id/alplah_no" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentTop="true" android:layout_centerHorizontal="true" style="@style/SecondTitleText" />
        <TextView android:textColor="#ff8c94a7" android:gravity="center" android:layout_gravity="center_horizontal" android:id="@id/scan_tips" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="@dimen/qrcode_image_margin_top" android:text="@string/scan_robot_qr_bind" android:layout_below="@id/alplah_no" android:layout_centerHorizontal="true" style="@style/contentTitleText" />
        <Button android:textStyle="normal" android:textColor="#ff55595c" android:gravity="center" android:layout_gravity="center_horizontal" android:id="@id/btn_save" android:background="@drawable/btn_geting" android:layout_width="wrap_content" android:layout_height="@dimen/input_wifi_edittext_height" android:layout_marginTop="20.0dip" android:text="@string/save_qr" android:layout_below="@id/scan_tips" android:layout_alignLeft="@id/scan_tips" android:layout_alignRight="@id/scan_tips" android:layout_centerHorizontal="true" style="@style/SecondTitleText" />
    </RelativeLayout>
</LinearLayout>